--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,16 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <my-app></my-app>
+
+  <script src="../dist/out-tsc/src/main.js"></script>
+  <script src="../dist/out-tsc/src/app/app.component.js"></script>
+  <script src="../dist/out-tsc/src/app/app.module.js"></script>
+  <script src="../dist/out-tsc/src/app/todo.model.js"></script>
+  <script src="../dist/out-tsc/src/app/todo.service.js"></script>
+
+
+
+
 </body>
 </html>
